force-app/main/default/objects/Archival_Job_Log__c/Archival_Job_Log__c.object-meta.xml
<CustomObject>
    <label>Archival Job Log</label>
    <nameField>
        <displayFormat>AJL-{0000}</displayFormat>
        <label>Archival Job Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archival Job Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>