force-app/main/default/objects/Archival_Job_Log__c/fields/Archive_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Archive_Batch_Id__c</fullName>
    <label>Archive Batch Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>