force-app/main/default/objects/Archival_Job_Log__c/fields/Deletion_Batch__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deletion Batch</label>
    <type>Checkbox</type>
</CustomField>