force-app/main/default/objects/Archival_Job_Log__c/fields/Total_Archived__c.field-meta.xml
<CustomField>
    <fullName>Total_Archived__c</fullName>
    <label>Total Archived</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>