force-app/main/default/objects/Archival_Job_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Archived_Object__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Total_Archived__c</columns>
    <columns>Total_Failed__c</columns>
    <columns>Total_Processed__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>